# bike-related-full-remote

./: LEGACY_LABELING_COUNTS.md  bike-related-diagram.excalidraw  database-doc.md
event-registry-pipeline/: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
event-registry-pipeline/.github/workflows/: ingest-cron.yml  ingest.yml
event-registry-pipeline/docs/: architecture.md  assumptions.md  overview.md
event-registry-pipeline/docs/database/: database-doc.md  migrations.md  schema.md
event-registry-pipeline/docs/legacy/: notes_eventRegistryApi.md  notes_flag-the-event.md
event-registry-pipeline/docs/operations/: github-actions.md  incremental-ingestion.md  ingestion.md  labeling.md  observability.md  running-locally.md
event-registry-pipeline/docs/planning/: agent-brief.md  decisions.md  roadmap.md  tasks.md
event-registry-pipeline/prompts/phase1/: README.md  v001.md
event-registry-pipeline/prompts/phase2/: README.md  v001.md
event-registry-pipeline/scripts/: bootstrap_db.sql
event-registry-pipeline/scripts/migrations/: 001_add_pipeline_run_counts.sql  002_add_event_flags.sql  003_add_events_rejected_srid.sql  006_add_events_rejected_accepted.sql  007_add_pipeline_run_ranges.sql  008_add_labeling_runs.sql
event-registry-pipeline/src/erp/: __init__.py  models.py
event-registry-pipeline/src/event_registry_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
event-registry-pipeline/tests/: test_incremental_ids.py  test_labeling_common.py  test_open311_live.py  test_prompt_loader.py  test_quality_gate.py
(+33 files in other folders)
